@startuml

title __ENTITIES's Class Diagram__\n

  package  {
    package Entities {
      class Cycle {
          - animationFrames : Image[]
          - currentFrame : int
          + Cycle()
          + next()
      }
    }
  }
  

  package  {
    package Entities {
      class DecorativeEntity {
          - entityImage : Image
          + DecorativeEntity()
          + DecorativeEntity()
          + setImage()
          + render()
          + getBoundary()
          + intersects()
          + getEntityImage()
      }
    }
  }
  

  package  {
    package Entities {
      abstract class Entity {
          # entityName : String
          # width : double
          # height : double
          # positionX : double
          # positionY : double
          # velocityX : double
          # velocityY : double
          # isBackground : boolean
          + setPosition()
          + setVelocity()
          + changeVelocity()
          + update()
          + setIsBackground()
          + setEntityName()
          + getName()
          {abstract} + render()
          + toString()
      }
    }
  }
  

  package  {
    package Entities {
      class InteractableEntity {
          + InteractableEntity()
          + InteractableEntity()
          + render()
          + setImageView()
      }
    }
  }
  

  package  {
    package Entities {
      class CustomImageView {
          + CustomImageView()
      }
    }
  }
  

  package  {
    package Entities {
      class InteractableHandler {
          + handle()
      }
    }
  }
  

  package  {
    package Entities {
      class Player {
          {static} - WALK_RIGHT : Cycle
          {static} - WALK_LEFT : Cycle
          + Player()
          + update()
      }
    }
  }
  

  DecorativeEntity -up-|> Entity
  InteractableEntity -up-|> Entity
  InteractableEntity o-- CustomImageView : imView
  InteractableEntity o-- PrimaryView : main
  InteractableEntity +-down- CustomImageView
  InteractableEntity +-down- InteractableHandler
  CustomImageView -up-|> ImageView
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InteractableHandler -up-|> EventHandler
  Player -up-|> InteractableEntity
  Player o-- Cycle : currentCycle
  CustomImageView -up-|> ImageView
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InteractableHandler -up-|> EventHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
